src/test/deca/syntax/valid/testTwoVariables.deca
// test declaring two variables at once;
// Result OK;
{
    int x,y;
}
