src/test/deca/syntax/invalid/testInvalidDecl.deca
// Declaring variables without separation
// Result : Error
{
    int x y;
}
